IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/12/14: Made Imodchopconts able to chop up or sort out contours based on
fine-grained color.

1/11/14: Fixed 3dmod crash when the I button is pressed in Zap and no image
loaded, present since 4.6.29.

1/10/14: Made 3dmod able to read single pixels from non-MRC-like files so
Pixel View and Graph windows can show file values.
 
1/8/14: Made all C programs able to read TIFF and MRC-like file formats, made 
it possible to direct output to a format specified by environment variable.
TIFF stacks are now written with min and max of the file in the last image
directory and these values are used when reading a stack.

1/8/14: Change eTomo to make it independent of Cygwin.  Fixed a problem with
killing processes on Windows.(Bug# 1716)

1/8/14: Added control of imodchopconts to eTomo - Fiducial Model Dialog.
(Bug# 1767)

1/2/14: Replaced Fortran image I/O system with system used by C programs.
Fortran programs can now read TIFF, DigitalMicrograph, and other MRC-like
files.

1/2/14: IMOD_4-6-35
1/2/14: Fixes in 3dmod for problems with toolbar and popup menu and new model
view tool windows.

12/31/13: IMOD_4-6-34
12/25/13: Changed description of hot keys in help files and tooltips to show
plain letter as upper instead of lower case (S not s) and shifted letter with
Shift+ instead or just upper case (Shift+S not S).

12/23/13: Added ability to change object transparency during Model View
movies. 

12/23/13: Made hot key popup menus for Zap, Slicer, and XYZ windows that show
up when right-clicking over a toolbar, and added a HotKey menu to Model View.
These menus allow most hot keys to be seen and selected.

12/23/13: Added hot key for resizing image inside Zap or Slicer rubber band to
fill window.

12/22/13: Added a dialog to set the size of the Model View window without
changing model zoom.
 
12/22/13: Added menu entry Image - Linked Slicers to open an array of slicers,